tests/baselines/reference/parserEnum2.errors.txt
tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum2.ts(3,17): error TS1148: Cannot compile external modules unless the '--module' flag is provided.


==== tests/cases/conformance/parser/ecmascript5/EnumDeclarations/parserEnum2.ts (1 errors) ====
    
    
        export enum SignatureFlags {
                    ~~~~~~~~~~~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
            None = 0,
            IsIndexer = 1,
            IsStringIndexer = 1 << 1,
            IsNumberIndexer = 1 << 2
        }